# PokedexDeepResearch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
agents/: agents.py  core.py  graph.py  models.py  prompts.py  utils.py
data/: build_type_chart.py  pokemon.parquet  type_effectiveness_chart.json
dataset/: build_dataset.py  generate_types.py  type_chart.py  utils.py
resources/: enums.py  pokemon.parquet
tools/: agent.py  analyse_pokemon_team.py  analyse_team.py  analyse_team_defense.py  build_dataset.py  get_pokemon_profile.py  get_pokemon_profiles.py  search_pokemon_by_criteria.py  search_pokemon_web.py  search_pokemon_wiki.py  type_chart.py  utils.py
