[project]
name = "pokedex-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "chainlit>=2.6.0",
    "logfire[httpx]>=3.21.2",
    "pyarrow>=20.0.0",
    "pydantic-ai[logfire]>=0.3.4",
    "tavily-python>=0.7.9",
]
